resolve issue with body width on horizontal scroll

--- a/css/main/common.css
+++ b/css/main/common.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
   color: #262936;
+  min-width: 900px;
 }
 
 section h2 {
